# Taches

./: README.md  Taches.cabal
app/: Contacts.hs  Initiatives.hs  Taches.hs  Uuid.hs
src/: CRUD.hs  Initiative.hs  Parametres.hs  Personne.hs  Table.hs  Tache.hs  Telephone.hs
test/: TestTable.hs
